<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".activities.CreateNominationActivity">

	<androidx.appcompat.widget.Toolbar
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/black"
		android:paddingBottom="10dp"
		android:paddingTop="30dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/bold_headline_small"
			android:layout_gravity="center_horizontal"
			android:text="@string/create_a_nomination"
			android:textColor="@color/white" />
	</androidx.appcompat.widget.Toolbar>

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<ImageView
				android:layout_width="match_parent"
				android:layout_height="180dp"
				android:importantForAccessibility="no"
				android:scaleType="centerCrop"
				android:src="@drawable/artwork_create" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingBottom="50dp"
				android:paddingHorizontal="16dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/bold_headline_small"
					android:layout_marginTop="30dp"
					android:text="@string/id_like_to_nominate"
					android:textColor="@color/black" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/body"
					android:layout_marginTop="8dp"
					android:text="@string/id_like_to_nominate_subtitle"
					android:textColor="@color/black" />

				<!-- TODO: Add the drop down selector of nominees -->
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="8dp"
					android:orientation="horizontal">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="34dp"
						android:layout_marginEnd="4dp"
						android:text="@string/asterisk"
						style="@style/bold_headline_smallest"
						android:lineSpacingExtra="0sp"
						android:gravity="top"
						android:textColor="@color/pink"/>
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="34dp"
						android:text="@string/cube_s_name"
						style="@style/bold_headline_smallest"
						android:lineSpacingExtra="0sp"
						android:gravity="top"
						android:textColor="@color/black"/>

				</LinearLayout>


				<Spinner
					android:id="@+id/nameSpinner"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					style="@style/spinner_outline"/>

				<View
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:background="@color/grey_mild"
					android:layout_marginTop="40dp" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/bold_headline_small"
					android:layout_marginTop="40dp"
					android:text="@string/reason_title"
					android:textColor="@color/black" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/body"
					android:layout_marginTop="8dp"
					android:text="@string/reason_subtitle"
					android:textColor="@color/black" />

				<!-- TODO: Add the Edit text for the reason -->
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="8dp"
					android:orientation="horizontal">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="34dp"
						android:layout_marginEnd="4dp"
						android:text="@string/asterisk"
						style="@style/bold_headline_smallest"
						android:lineSpacingExtra="0sp"
						android:gravity="top"
						android:textColor="@color/pink"/>
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="34dp"
						android:text="@string/reasoning_label"
						style="@style/bold_headline_smallest"
						android:lineSpacingExtra="0sp"
						android:gravity="top"
						android:textColor="@color/black"/>
				</LinearLayout>

				<EditText
					android:id="@+id/reasoningEditText"
					style="@style/edit_text_outline"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="text|textCapSentences|textMultiLine"
					android:maxLength="280"/>

				<View
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:background="@color/grey_mild"
					android:layout_marginTop="40dp" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/bold_headline_small"
					android:layout_marginTop="40dp"
					android:text="@string/process_title"
					android:textColor="@color/black" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/body"
					android:layout_marginTop="8dp"
					android:text="@string/process_subtitle"
					android:textColor="@color/black" />

				<!-- TODO: Add the Radio button for the feedback -->
				<RadioGroup
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:layout_marginTop="40dp">

					<RadioButton
						android:id="@+id/veryUnfairRadio"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layoutDirection="rtl"
						android:text="@string/very_unfair"
						android:drawableEnd="@drawable/very_unfair"
						style="@style/radio_unselected"
						/>
					<RadioButton
						android:id="@+id/unfairRadio"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layoutDirection="rtl"
						android:text="@string/unfair"
						android:drawableEnd="@drawable/unfair"
						style="@style/radio_unselected"/>
					<RadioButton
						android:id="@+id/notSureRadio"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layoutDirection="rtl"
						android:text="@string/not_sure"
						android:drawableEnd="@drawable/not_sure"
						style="@style/radio_unselected" />
					<RadioButton
						android:id="@+id/fairRadio"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layoutDirection="rtl"
						android:text="@string/fair"
						android:drawableEnd="@drawable/fair"
						style="@style/radio_unselected"/>
					<RadioButton
						android:id="@+id/veryFairRadio"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layoutDirection="rtl"
						android:drawableEnd="@drawable/very_unfair"
						android:text="@string/very_fair"
						style="@style/radio_unselected"/>
				</RadioGroup>
			</LinearLayout>

		</LinearLayout>

	</androidx.core.widget.NestedScrollView>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/white"
		android:clipChildren="false"
		android:clipToPadding="false"
		android:elevation="10dp"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		android:paddingHorizontal="24dp"
		android:paddingVertical="20dp">

		<androidx.appcompat.widget.AppCompatButton
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/back_button"
			style="@style/button_outline"
			android:layout_marginEnd="7dp"
			android:layout_weight="1"
			android:text="@string/back" />

		<androidx.appcompat.widget.AppCompatButton
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/submit_button"
			style="@style/button"
			android:enabled="false"
			android:layout_marginStart="7dp"
			android:layout_weight="2"
			android:text="@string/submit_nomination" />

	</LinearLayout>
</LinearLayout>